# FAQ-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/agents/: faq_agent.py  grader.py  scrapper.py
app/api/: models.py  routes.py
app/config/: settings.py
app/core/: pipeline.py  session_manager.py
app/database/: connection.py  setup.py
app/workflow/: orchestrator.py
